Material Icons and Async Await Fix with Errorhandling